--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watch Now</title>
+  <title>Whatsapp</title>
 
   <!-- ✅ Meta Aman Anti Blokir -->
   <meta name="robots" content="index, follow">
   <meta name="referrer" content="no-referrer-when-downgrade">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content=" Click here to continue ">
-  <meta property="og:title" content="Watch Now">
-  <meta property="og:description" content="Click here to continue">
+  <meta name="description" content=" Undangan whatsapp ">
+  <meta property="og:title" content="Whatsapp">
+  <meta property="og:description" content=" Undangan whatsapp ">
   <meta property="og:image" content="https://i.imgur.com/JkRa27l.png">
   <meta property="og:type" content="website">
 
