--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- ✅ Script Auto Redirect Langsung -->
   <script>
     window.onload = function() {
-      window.location.href = "https://www.effectivegatecpm.com/wkj2qmku?key=469be1ba075a153196aae2fe5b0810c7";
+      window.location.href = "https://carijodoh2000.blogspot.com/2025/11/citra-gadis-malaysia-cari-suami-citra.html";
     };
   </script>
 </head>
