--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- ✅ Script Auto Redirect Langsung -->
   <script>
     window.onload = function() {
-      window.location.href = "https://carijodoh2000.blogspot.com/2025/11/rara-janda-anak-1-cari-suami-atoptions.html";
+      window.location.href = "https://miu189.github.io/waa.ne-60-7668-7x66/";
     };
   </script>
 </head>
